--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -20,7 +20,46 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+    }
+
+    ext {
+        androidLibs = [
+                appcompat         : 'androidx.appcompat:appcompat:1.1.0',
+                recyclerview      : 'androidx.recyclerview:recyclerview:1.1.0',
+                constraintlayout  : 'androidx.constraintlayout:constraintlayout:1.1.3',
+                androidxCore      : 'androidx.core:core-ktx:1.2.0',
+                lifecycleViewModel: 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0',
+                material          : 'com.google.android.material:material:1.1.0',
+                roomRuntime       : 'androidx.room:room-runtime:2.2.4'
+        ]
+
+        androidKaptLibs = [
+                roomCompiler: 'androidx.room:room-compiler:2.2.4'
+        ]
+
+        kotlinLibs = [
+                stdlib    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+                coroutines: 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
+        ]
+
+        libs = [
+                okhttpLoginInterceptor: 'com.squareup.okhttp3:logging-interceptor:4.2.1',
+                retrofit              : 'com.squareup.retrofit2:retrofit:2.7.2',
+                retrofitGsonConverter : 'com.squareup.retrofit2:converter-gson:2.7.2',
+                koin                  : "org.koin:koin-androidx-viewmodel:2.1.1"
+        ]
+
+        testLibs = [
+                junit        : 'junit:junit:4.12',
+                mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0",
+                mockitoInline: "org.mockito:mockito-inline:2.28.2"
+        ]
+
+        androidTestLibs = [
+                testRunner: 'androidx.test:runner:1.2.0',
+                espresso  : 'androidx.test.espresso:espresso-core:3.2.0'
+        ]
     }
 }
 
