--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.covidinfo.ui.countrydetail.CountryDetailActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
-        <activity android:name="com.example.covidinfo.ui.main.MainActivity">
+        <activity
+            android:name="com.example.covidinfo.ui.countrydetail.CountryDetailActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name="com.example.covidinfo.ui.main.MainActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
